# fastsweep

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pip.yml  wheels.yml
kernels/: Makefile  cuda_kernels.cu  cuda_kernels.h  cuda_kernels.ptx  vec.h
python/: example.py  pure_python_impl.py
src/: cuda_helpers.h  distance_marcher.cpp  distance_marcher.h  main.cpp
src/fastsweep/: __init__.py
src/tests/: test_redistancing.py
