[build-system]
requires = ["scikit-build-core",
            "nanobind == 2.2.0",
            "drjit==1.0.1"]
build-backend = "scikit_build_core.build"


[project]
name = "fastsweep"
version = "0.2.0"
description = "Eikonal solver using parallel fast sweeping."
readme = "README.md"
dependencies = [
  "typing_extensions>=4.12;python_version<\"3.11\"",
  "drjit==1.0.1",
]
requires-python = ">=3.8"
authors = [
    { name = "Delio Vicini", email = "delio.vicini@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: BSD License"
]

[project.urls]
Homepage = "https://github.com/rgl-epfl/fastsweep"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

cmake.verbose = true
logging.level = "INFO"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
archs = ["auto64"]
skip = "*-musllinux* pp* cp38-macosx_*"

# Try to import the package to see if it was built correctly.
test-command = "python -c \"import fastsweep\""

# needed for full c++17 support
[tool.cibuildwheel.macos.environment]
macosx_deployment_target = "10.14"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} --ignore-missing-dependencies {wheel}"

[tool.cibuildwheel.linux]
before-all = "yum install -y libatomic"

repair-wheel-command = "pip install wheel>=0.40; new_whl_name=$(python -m wheel tags --platform-tag manylinux_2_17_x86_64.manylinux2014_x86_64 {wheel} | tail -1 | cat); cp $(dirname {wheel})/$new_whl_name {dest_dir}"

[tool.pytest.ini_options]
norecursedirs = [ "ext" ]
