[build-system]
requires = ["scikit-build-core >=0.4.3",
            "nanobind == 2.2.0",
            "drjit==1.0.1"]
build-backend = "scikit_build_core.build"


[project]
name = "fastsweep"
version = "0.2.0"
description = "Eikonal solver using parallel fast sweeping."
readme = "README.md"
dependencies = [
  "typing_extensions>=4.12;python_version<\"3.11\"",
  "drjit==1.0.1",
]
requires-python = ">=3.8"
authors = [
    { name = "Delio Vicini", email = "delio.vicini@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: BSD License"
]

[project.urls]
Homepage = "https://github.com/rgl-epfl/fastsweep"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

cmake.verbose = true
logging.level = "INFO"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
archs = ["auto64"]
skip = "*-musllinux* pp* cp38-macosx_*"

# Try to import the package to see if it was built correctly.
test-command = "python -c \"import fastsweep\""

# needed for full c++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.cibuildwheel.linux]
before-all = "yum install -y libatomic"

[tool.pytest.ini_options]
norecursedirs = [ "ext" ]
